attempted fix for rendering on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@ nav {
   height: 60px;
 }
 
+.navLinks {
+  background-color: var(--robin-blue);
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -263,6 +267,22 @@ li::before {
 
   footer {
     bottom: auto; /* Allows footer to properly move to bottom of page when page is small */
+  }
+
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+  }
+
+  .navLinks {
+    margin-bottom: 10px;
+  }
+
+  .name {
+    margin-bottom: 10px;
+    margin-top: -10px;
   }
 }
 
